fixed the overflow on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Ancizar Serif", serif;
+  overflow-x : hidden
 }
 .touch-pan-zoom {
   touch-action: pan-x pan-y pinch-zoom;
@@ -10,4 +11,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+section{
+  overflow:hidden
 }
